Add native lazy loading

--- a/ambrosia.html
+++ b/ambrosia.html
@@ -86,18 +86,21 @@
           <img
             src="images/ambrosia-1.png"
             alt="View full size version of the ambrosia webpage at a desktop screen size"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/ambrosia-2.png"
             alt="View full size version of the ambrosia webpage at a tablet screen size"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/ambrosia-3.png"
             alt="View full size version of the ambrosia webpage at a mobile screen size"
+            loading="lazy"
           />
         </button>
       </div>
@@ -131,24 +134,28 @@
           <img
             src="images/ambrosia-hero.png"
             alt="Colorful grid of graphic illustrations. Across the top of the grid are three cups topped with whipped cream and cherries. Below is a line of text that reads 'Ambrosia'. Underneath that is a heart and the text 'First, Some History'"
+            loading="lazy"
           />
         </div>
         <div class="slide vertical">
           <img
             src="images/ambrosia-1.png"
             alt="Screenshot of the ambrosia webpage at a desktop screen size. A grid of illustrations of cups of whipped cream and cherries, and a heart are followed by a section of text explaining the history of the recipe. Below that is the ambrosia recipe itself."
+            loading="lazy"
           />
         </div>
         <div class="slide vertical">
           <img
             src="images/ambrosia-2.png"
             alt="Screenshot of the ambrosia webpage at a tablet screen size. A grid of illustrations of cups of whipped cream and cherries, and a heart are followed by a section of text explaining the history of the recipe. Below that is the ambrosia recipe itself."
+            loading="lazy"
           />
         </div>
         <div class="slide vertical">
           <img
             src="images/ambrosia-3.png"
             alt="Screenshot of the ambrosia webpage at a mobile screen size. A grid of illustrations of cups of whipped cream and cherries, and a heart are followed by a section of text explaining the history of the recipe. Below that is the ambrosia recipe itself."
+            loading="lazy"
           />
         </div>
 
