--- a/david.html
+++ b/david.html
@@ -70,12 +70,14 @@
           <img
             src="images/david-1.jpg"
             alt="View full size version of paper items laid out, including post-its and writing"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-2.jpg"
             alt="View full size version of hobby items and books laid out"
+            loading="lazy"
           />
         </button>
       </div>
@@ -84,12 +86,14 @@
           <img
             src="images/david-3.png"
             alt=" View full size version of email"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-4.jpg"
             alt="View full size version of half-open letter"
+            loading="lazy"
           />
         </button>
       </div>
@@ -98,18 +102,21 @@
           <img
             src="images/david-5.png"
             alt="View full size version of text message chat"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-6.jpg"
             alt="View full size version of laid-out books, post-its, letters and lock box"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-7.png"
             alt="View full size version of text message chat"
+            loading="lazy"
           />
         </button>
       </div>
@@ -119,24 +126,28 @@
           <img
             src="images/david-8.jpg"
             alt="View full size version of dark desk illuminated by a lamp"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-9.jpg"
             alt="View full size version of sticky notes on a concrete wall"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-10.jpg"
             alt="View full size version of bookshelf with photo on top"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/david-11.jpg"
             alt="View full size version of books sitting on the floor next to a bookshelf"
+            loading="lazy"
           />
         </button>
       </div>
@@ -170,24 +181,28 @@
           <img
             src="images/david-hero.jpg"
             alt="Dimly lit room installation with a desk, chair and bookshelf. The desk is messy and sits to the left-hand-side, lit with a single lamp. The walls are concrete and have post-it notes and posters. Trash is peppered across the ground, and a bookshelf stacked with books, toys and photos sits in the back right corner"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-1.jpg"
             alt="Bird's-eye view of post-its and crumpled paper laid out and facing up. A yellow post-it reads a gmail name and password, with the text 'You're such a dork! (but I love you) scribbled in the corner.' Another note reads, 'Try to talk to Sarah', and another one contains a 3 bullet to-do list"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-2.jpg"
             alt="Bird's-eye view of items laid out and facing up. Items include a pink monkey, various mystery and sci-fi books, two framed photos of a guy with his friends, a rock collection, a toy robot, and a hand-held video camera"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-3.png"
             alt="Email from Jeremy Goldenberg. Name, email, and phone number is redacted, but otherwise the text reads 'I have a huge favor to ask you. I need you to go check on my friend David. I think you met him once at my house. I can't go over there myself but his mom contacted me and said that she hasn't heard from him in a few days. If you could go check his place out at 1:00pm in Brown tomorrow (Sunday, February 26th), let me know. And I lost your phone number, could you send me a text at (redacted)? Also, bring your phone with you. I want to be able to text you if you need anything. Thanks a lot, Jer'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
@@ -200,42 +215,49 @@
           <img
             src="images/david-5.png"
             alt="Text message chat that starts, 'Do you know the number code for the locked black box?' A reply says, 'Huh, no. It's probably somewhere in his room or on his computer, he always writes down all his pass codes on notes. Actually think he has a sticky note application on his laptop it might be there'. A subsequent reply reads, 'Does he like poetry? And found the lock box code!' A reply after that reads, 'Awesome and Yeah, he sometimes talks about writing it, never showed me any though'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-6.jpg"
             alt="Bird's-eye view of laid-out books, post-its, letters and lock box. A stack of letters has a closed note on top with a drawn heart and the name 'David' written on the front. Post-its with inspirational quotes are laid out, as well as sci-fi books with post-its on their covers that contain positive notes about each book"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-7.png"
             alt="Text message chat starts, 'Cant believe you keep tryna shove this campy sci fi crap down his throat. Jer, you are so pretentious.' A reply says, 'I mean he liked it before we met... I don't know. Did it seem like I forced it on him?' The reply reads, 'Davids dead, Jer', with the subsequent reply, 'What? Oh my god'. After that, a text reads, 'Jk LOL jer you stupid fuck'. The next reply states, 'Oh my god don't do that man. Did you at least find why he's been so distant?'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-8.jpg"
             alt="Dark desk dimly-lit by a single lamp. The desk contains a framed photo, tissues, a lockbox, sticky notes, and an open laptop."
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-9.jpg"
             alt="Sticky notes on a concrete wall. The top reads, 'Keep Moving forward!' The bottom left lists 'Finish Work. Get card activated. Call mom.' The bottom right note lists, 'Write it out. Do something I enjoy. Keep your distance. Leave the house'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-10.jpg"
             alt="Top-half of a bookshelf. A framed photo of people dressed up and posing sits on top. On the shelf are stacked sci-fi books, a toy robot and rubber ducky, a couple of sticky notes and a handheld video camera"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/david-11.jpg"
             alt="Bottom-half of a bookshelf. Next to it on the floor is a stack of books and a box of a model Star Trek spaceship. On the shelf are books about space, games and theatrical design. On the bottom shelf is a lockbox"
+            loading="lazy"
           />
         </div>
 
