--- a/debug-log.html
+++ b/debug-log.html
@@ -70,60 +70,70 @@
           <img
             src="images/debug-1.png"
             alt="View full size version of debug.log starting screen"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-2.png"
             alt="View full size version of debug.log screenshot of intro text"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-3.png"
             alt="View full size version of a screenshot of bold, red warning text"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-4.png"
             alt="View full size version of gameplay during a large group of enemies"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-5.png"
             alt="View full size version of gameplay with a couple of enemies"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-6.png"
             alt="View full size version of gameplay with a medium amount of large enemies"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-7.jpg"
             alt="View full size version of gameplay with screen glitching"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-8.jpg"
             alt="View full size version of screen glitching at end of game"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/debug-9.jpg"
             alt="View full size version of ending screen with scores, with the text 'Safe to Eject'"
+            loading="lazy"
           />
         </button>
         <button class="zoomable gi-full">
           <img
             src="images/debug-hero.jpg"
             alt="View full size version of Debug.Log arcade cabinet"
+            loading="lazy"
           />
         </button>
       </div>
@@ -156,60 +166,70 @@
           <img
             src="images/debug-1.png"
             alt="Starting screen with the text, 'debug.Log_' and 'Press A to execute method'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-2.png"
             alt="Screenshot of intro text that reads 'Manual purge REQUIRED. Caution: Entry plug override UNRESPONSIVE. 100 seconds until AUTOMATIC UNPLUG. SURVIVE until proper ejection to maintain psychological cohesion. Full corruption integrity may cause death outside of simulation_'. Underneath is the text, 'Press A to debrief manual override'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-3.png"
             alt="Screenshot of bold, red warning text reading, 'Warning: Data Corruption Found' in all caps"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-4.png"
             alt="Gameplay with two players surrounded by a large group of black, pixelated enemies with spider legs. The scores at the top read 'P1: 020' and 'P2: 00'. At the bottom is the time countdown, reading, 'Automatic Unplug: 074'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-5.png"
             alt="Gameplay with two players at opposite ends of the screen with a couple of enemies between them. The scores at the top read 'P1: 020' and 'P2: 00'. At the bottom is the time countdown, reading, 'Automatic Unplug: 083'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-6.png"
             alt="Gameplay two players at opposite ends of the screen with a medium amount of large enemies and spider-type enemies between them. The scores at the top read 'P1: 070' and 'P2: 010'. At the bottom is the time countdown, reading, 'Automatic Unplug: 066'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-7.jpg"
             alt="Screen glitching with rainbow colors, with black silhouettes of enemies over top. The scores at the top of the screen read 'P1: 530' and 'P2: 530'. At the bottom is the time countdown, reading, 'Automatic Unplug: 004'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-8.jpg"
             alt="Screen glitching with blue colors at the end of the game. The scores at the top of the screen read 'P1: 440' and 'P2: 570'. At the bottom is the time countdown, reading, 'Automatic Unplug: 000'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-9.jpg"
             alt="Ending screen with scores 550 for player one and 530 for player two, with the text 'Safe to Eject' in the center. Below is the text, 'Manual purge successful; Safely ejecting software. Please wait_'. At the bottom of the screen is the text 'Press A to troubleshoot'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/debug-hero.jpg"
             alt="Arcade cabinet with the game Debug.Log on the screen. The cabinet has two arcade sticks with buttons and headphones, and two stools sitting in front."
+            loading="lazy"
           />
         </div>
 
