--- a/draw-this.html
+++ b/draw-this.html
@@ -90,6 +90,7 @@
           <img
             src="images/drawthis-1.png"
             alt="View full size version of screenshot of the introductory page of the app"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2016-11-13_01_Kjeungskj%C3%A6r_Lighthouse,_S%C3%B8r-Tr%C3%B8ndelag,_Norway.jpg -->
@@ -97,6 +98,7 @@
           <img
             src="images/drawthis-2.jpg"
             alt="View full size version of app screenshot with a lighthouse photo"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:20180127_FIS_NC_WC_Seefeld_Sophie_Caldwell_850_1151.jpg -->
@@ -104,6 +106,7 @@
           <img
             src="images/drawthis-3.jpg"
             alt="View full size version of app screenshot with photo of skier"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Anfiteatro_de_Pula,_Croacia,_2017-04-17,_DD_13-18_HDR_PAN.jpg -->
@@ -111,6 +114,7 @@
           <img
             src="images/drawthis-4.jpg"
             alt="View full size version of app screenshot with photo of Colosseum"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Abfertigen_einer_Meldung_durch_Brieftauben_-_CH-BAR_-_3240471_-_restoration.jpg -->
@@ -118,6 +122,7 @@
           <img
             src="images/drawthis-5.jpg"
             alt="View full size version of app screenshot with black-and-white photograph of soldiers"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Buddhist_monks_cleaning_the_yard_at_Wat_Xieng_Thong_temple.jpg -->
@@ -125,6 +130,7 @@
           <img
             src="images/drawthis-6.jpg"
             alt="View full size version of app screenshot with a Buddhist temple photograph"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Boys_playing_street_football_in_Egypt.jpg -->
@@ -132,6 +138,7 @@
           <img
             src="images/drawthis-7.jpg"
             alt="View full size version of app screenshot with an image of boys playing soccer"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:2019_-_Parc_national_des_Pyrenees_-_refuge_des_Espuguettes.jpg -->
@@ -139,6 +146,7 @@
           <img
             src="images/drawthis-8.jpg"
             alt="View full size version of app screenshot with a photo of a house overlooking a mountain range"
+            loading="lazy"
           />
         </button>
         <!-- Link to below image: https://commons.wikimedia.org/wiki/File:Banaue_Philippines_Ifugao-Tribesman-01.jpg -->
@@ -146,6 +154,7 @@
           <img
             src="images/drawthis-9.jpg"
             alt="View full size version of app screenshot with an image of a crouching, older Filipino man "
+            loading="lazy"
           />
         </button>
       </div>
