--- a/hello.html
+++ b/hello.html
@@ -60,78 +60,91 @@
           <img
             src="images/helloworld-1.jpg"
             alt="View full size version of white text on a black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-2.jpg"
             alt="View full size version of a grid of glitched and pixelated, black-and-white photos"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-3.jpg"
             alt="View full size version of a pixelated website"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-4.jpg"
             alt="View full size version of abstract, colorful pixelation"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-5.jpg"
             alt="View full size version of abstract, colorful pixelation"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-6.jpg"
             alt="View full size version of black and white pattern with a text box"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-7.jpg"
             alt="View full size version of white text on a black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-8.jpg"
             alt="View full size version of text and neon green pixelated pattern"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-9.jpg"
             alt="View full size version of white text on a black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-10.jpg"
             alt="View full size version of a colorful, glitchy and pixelated abstract graphic"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-11.jpg"
             alt="View full size version of white text in a box on a black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-12.jpg"
             alt="View full size version of white text in a column on a black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/helloworld-13.jpg"
             alt="View full size version of a column of glitched white lines on a black background"
+            loading="lazy"
           />
         </button>
       </div>
@@ -164,78 +177,91 @@
           <img
             src="images/helloworld-1.jpg"
             alt="Text that reads 'those, the social web_ i divulge as much as i am comfortable with, though //this sense of privacy is misleading ( → censorship, privacy), misconceived, wrong, not. suitable, it’s just an ideal perception of a person.not even real. this is not a reflection of your physical self. this is not representative of of of of, i assume that those will continue their captivation of self-expression'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-2.jpg"
             alt="Grid of glitched and pixelated, black-and-white headshot photos. A pop-up for downloading a file titled 'me.zip' is in front of the grid"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-3.jpg"
             alt="Pixelated and glitched news-style website"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-4.jpg"
             alt="Abstract, colorful pixelation. A galaxy with a neon green, uneven circle"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-5.jpg"
             alt="Abstract, colorful pixelation of a map with two, tiny neon green squares overlayed on it"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-6.jpg"
             alt="Text in front of a graphic black-and-white patterned background. The text reads 'the user//protocol address to track and see themselves# and there is also an internet identity, a social identity //a fake identity? a construct of myself that i use to present to others -- the changing name, ppppseudonyms with varying degrees of information under the same protocol address and yet|'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-7.jpg"
             alt="Text reads 'is this where ideas go to live forever?  _long_ after they have been abandoned by the living. these permanent concepts ( → permanent memory). static lest someone is there to extract meaning. .a tree falls in a forest'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-8.jpg"
             alt="Text reads 'this is the starkness that governs our directions__ but where do. they. we. I go? the paths in the code lead to: _go to the left. _go to the right. (but these options are easily manipulated). the paths of the user are: _do nothing. _do something else. two of these paths are coded. the other two hinges upon an autonomous user. therein lies a code to the brain that i cannot see, and there even more nuanced pathways that i cannot see. theoretically, these structures provide//control//are we allowed suggestion or restriction?'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-9.jpg"
             alt="Text reads 'the sheer wealth of inforinforinforinformation makes it difficult to access memory and in in in consideration of ego protection, such as repression, that i do not possess such as you and you a./and //you and //you - - i do not forget the witnessing of pain and the ##empathy of those who rage against solitude so i am left to wit.her and contempla/te the deterioration of my own self'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-10.jpg"
             alt="Colorful, glitchy and pixelated abstract graphic of a flower and synapses blooming. In the top left are the words 'hello, world'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-11.jpg"
             alt="Text in a box reads 'the programming is deceptive in its freedom//like open air, as if anyone can contribute but there are clear rrrrestrictions // for instance. at its base, we are governed by two actions: ON + OFF'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-12.jpg"
             alt="Text reads '“Structural hierarchies help make websites accessible to search engines and users.” - Ellen Lupton. HIERARCHIES: .Structure .Institutions .Organization-- no/tt/te_ the organization of information to provide accessibility.'. A column of text below repeats the phrsase 'do programmers_designers have control over this interaction//'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/helloworld-13.jpg"
             alt="Column of glitched white lines of overlapping, unreadable text on a black background."
+            loading="lazy"
           />
         </div>
         <button class="left-arrow" aria-label="Previous image">
