--- a/index.html
+++ b/index.html
@@ -100,7 +100,12 @@
         </div>
         <div class="filter-option" data-filter="game art">
           <a href="scrap-yard.html">
-            <img src="./images/landing-scrapyard.jpg" alt="" width="250px" />
+            <img
+              src="./images/landing-scrapyard.jpg"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask long-animation">
                 Scrap Yard
@@ -111,7 +116,12 @@
         </div>
         <div class="filter-option" data-filter="code art">
           <a href="wander.html">
-            <img src="./images/landing-wander.png" alt="" width="250px" />
+            <img
+              src="./images/landing-wander.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Wander
@@ -122,7 +132,12 @@
         </div>
         <div class="filter-option" data-filter="code art">
           <a href="./ambrosia.html">
-            <img src="./images/landing-ambrosia-alt.png" alt="" width="250px" />
+            <img
+              src="./images/landing-ambrosia-alt.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Ambrosia
@@ -133,7 +148,12 @@
         </div>
         <div class="filter-option" data-filter="code">
           <a href="hello.html">
-            <img src="./images/landing-helloworld.jpg" alt="" width="250px" />
+            <img
+              src="./images/landing-helloworld.jpg"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Hello
@@ -145,7 +165,12 @@
 
         <div class="filter-option" data-filter="game">
           <a href="./unmasked.html">
-            <img src="./images/landing-unmasked.png" alt="" width="250px" />
+            <img
+              src="./images/landing-unmasked.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask long-animation">
                 The Unmasked
@@ -156,7 +181,12 @@
         </div>
         <div class="filter-option" data-filter="code game">
           <a href="./debug-log.html">
-            <img src="./images/landing-debug.png" alt="" width="250px" />
+            <img
+              src="./images/landing-debug.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Debug.Log
@@ -167,7 +197,12 @@
         </div>
         <div class="filter-option" data-filter="game">
           <a href="./david.html">
-            <img src="./images/landing-david.jpg" alt="" width="250px" />
+            <img
+              src="./images/landing-david.jpg"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask long-animation">
                 In David's Absence
@@ -178,7 +213,12 @@
         </div>
         <div class="filter-option" data-filter="game">
           <a href="./storylines.html">
-            <img src="./images/landing-storylines.png" alt="" width="250px" />
+            <img
+              src="./images/landing-storylines.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask long-animation">
                 Storylines
@@ -189,7 +229,12 @@
         </div>
         <div class="filter-option" data-filter="art">
           <a href="./home.html">
-            <img src="./images/landing-home-alt.png" alt="" width="250px" />
+            <img
+              src="./images/landing-home-alt.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Home
@@ -200,7 +245,12 @@
         </div>
         <div class="filter-option" data-filter="code game">
           <a href="./interplay.html">
-            <img src="./images/landing-interplay.png" alt="" width="250px" />
+            <img
+              src="./images/landing-interplay.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask long-animation">
                 Interplay
@@ -211,7 +261,12 @@
         </div>
         <div class="filter-option" data-filter="code game">
           <a href="./return.html">
-            <img src="./images/landing-return.png" alt="" width="250px" />
+            <img
+              src="./images/landing-return.png"
+              alt=""
+              width="250px"
+              loading="lazy"
+            />
             <span class="underline">
               <span class="underline-mask med-animation">
                 Return
