--- a/interplay.html
+++ b/interplay.html
@@ -60,12 +60,14 @@
           <img
             src="images/interplay-1.jpg"
             alt="View full size version of a bird's-eye view of two people standing in a projected circle"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/interplay-2.jpg"
             alt="View full size version of two people's legs running"
+            loading="lazy"
           />
         </button>
       </div>
@@ -74,18 +76,21 @@
           <img
             src="images/interplay-4.jpg"
             alt="View full size version of a laptop with a green circle on the screen"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/interplay-3.jpg"
             alt="View full size version of a projector pointed downwards over a railing"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/interplay-5.jpg"
             alt="View full size version of a person using a mouse to interact with a laptop that has a red circle and black blobs on the screen"
+            loading="lazy"
           />
         </button>
       </div>
@@ -119,30 +124,35 @@
           <img
             src="images/interplay-1.jpg"
             alt="Bird's-eye view of two people standing under projected light, inside a red circle. A third person stands off to the side under the projection"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/interplay-2.jpg"
             alt="Two people's legs blurred in a running motion. They are running around the projected circle on the floor"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/interplay-4.jpg"
             alt="A person uses the trackpad of a laptop to control a large green circle on the screen. Inside the circle are two black sillhouettes of people from a bird's-eye view"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/interplay-3.jpg"
             alt="A projector on a stand hangs over a railing, pointing downwards. Strings are attached to the rail, from which a kinect sensor hangs below the projector"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/interplay-5.jpg"
             alt="A smiling guy uses a mouse to interact with a laptop. On the laptop's screen is a small red circle, with black silhouettes of people underneath the circle"
+            loading="lazy"
           />
         </div>
 
