--- a/return.html
+++ b/return.html
@@ -70,24 +70,28 @@
           <img
             src="images/return-1.jpg"
             alt="View full size version of digital illustration of a traveler in a dimly lit cave"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-2.jpg"
             alt="View full size version of a black-and-white digital illustration of a traveler in a dimly lit, foggy cave"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-3.jpg"
             alt="View full size version of a digital illustration of desert mountains"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-4.jpg"
             alt="View full size version of a digital illustration of desert mountains under a blue sky"
+            loading="lazy"
           />
         </button>
       </div>
@@ -97,36 +101,42 @@
           <img
             src="images/return-5.jpg"
             alt="View full size version of a gameplay screenshot of a character talking to a shaman inside a hut"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-6.jpg"
             alt="View full size version of a gameplay screenshot of traveler character next to a flaming totem"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-7.jpg"
             alt="View full size version of a gameplay screenshot of traveler character on a wooden platform"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-8.jpg"
             alt="View full size version of a gameplay screenshot of traveler character outside a large gate"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-9.jpg"
             alt="View full size version of a gameplay screenshot of character standing at open gate"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/return-10.jpg"
             alt="View full size version of a gameplay screenshot of character walking through a rocky landscape"
+            loading="lazy"
           />
         </button>
       </div>
@@ -159,60 +169,70 @@
           <img
             src="images/return-1.jpg"
             alt="Digital illustration of a traveler in a dimly lit, blue-tinted cave. The traveler is wearing a cloak and bag, and carrying a staff"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-2.jpg"
             alt="Digital illustration of a traveler in a black-and-white, dimly lit and foggy cave. The traveler is holding a lit staff and there are whisps of thicker fog throughout the cave"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-3.jpg"
             alt="Digital illustration of desert mountains, with a red and orange gradient sunset in the background"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-4.jpg"
             alt="Digital illustration of desert mountains and sand under a blue sky. A red-cloaked figure is far off to the left walking on the sand, and to the right is a teepee with smoke coming out from the top"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-5.jpg"
             alt="Screenshot of a character talking to a shaman inside a hut. Both are standing below a hanging lantern. The shaman has a speech bubble of text above him, reading, 'It will let you glimpse into the realm of the dead for a brief moment'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-6.jpg"
             alt="Screenshot of gameplay in black-and-white. A character stands and holds a lantern next to a flaming totem. Text above the character states, 'Press B to interact with spirit objects in the Spirit Realm.'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-7.jpg"
             alt="Screenshot of traveler character in a forest. The character holds a lantern and stands on a raised wooden platform"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-8.jpg"
             alt="Screenshot of traveler character standing outside a large, closed wooden gate in the desert. The character is holding up a lit lantern"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-9.jpg"
             alt="screenshot of character in black-and-white landscape standing under a large, open wooden gate"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/return-10.jpg"
             alt="Screenshot of character walking through a rocky landscape. Text in front of them states 'You must be so exhausted'. The air around them is light blue, and large stone pillars behind them jut from the ground"
+            loading="lazy"
           />
         </div>
 
