--- a/scrap-yard.html
+++ b/scrap-yard.html
@@ -48,24 +48,28 @@
           <img
             src="images/scrapyard-1.jpg"
             alt="View full size version of a child moving a Scrap Yard game piece across a board"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-2.jpg"
             alt="View full size version of children playing Scrap Yard and holding game money"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-3.jpg"
             alt="View full size version of a child handing game money to another above a Scrap Yard board"
+            loading="lazy"
           />
         </button>
         <button class="zoomable gi-full">
           <img
             src="images/scrapyard-4.jpg"
             alt="View full size version of Scrap Yard cards"
+            loading="lazy"
           />
         </button>
       </div>
@@ -97,24 +101,28 @@
           <img
             src="images/scrapyard-5.png"
             alt="View full size version of empty squares on a graphic of a game board"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-6.png"
             alt="View full size version of semi-empty squares on a graphic of a white game board"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-7.png"
             alt="View full size version of semi-empty squares on a graphic of a teal game board"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/scrapyard-8.jpg"
             alt="View full size version of a black version of the Scrap Yard game board"
+            loading="lazy"
           />
         </button>
       </div>
@@ -202,42 +210,46 @@
         </p>
         <button class="close" aria-label="Close dialog">&times;</button>
         <div class="slide">
-          <img src="images/scrapyard-hero.jpg" />
+          <img src="images/scrapyard-hero.jpg" loading="lazy" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-1.jpg" />
+          <img src="images/scrapyard-1.jpg" loading="lazy" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-2.jpg" />
+          <img src="images/scrapyard-2.jpg" loading="lazy" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-3.jpg" />
+          <img src="images/scrapyard-3.jpg" loading="lazy" />
         </div>
         <div class="slide">
-          <img src="images/scrapyard-4.jpg" />
+          <img src="images/scrapyard-4.jpg" loading="lazy" />
         </div>
         <div class="slide">
           <img
             src="images/scrapyard-5.png"
             alt="Game board with one line of empty squares on the outer edge"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/scrapyard-6.png"
             alt="View full size version of semi-empty squares on a graphic of a white game board"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/scrapyard-7.png"
             alt="View full size version of semi-empty squares on a graphic of a teal game board"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/scrapyard-8.jpg"
             alt="View full size version of a black version of the Scrap Yard game board"
+            loading="lazy"
           />
         </div>
 
