--- a/wander.html
+++ b/wander.html
@@ -101,54 +101,63 @@
           <img
             src="images/wander1.png"
             alt="View full size version of a screenshot of ASCII flowers growing"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander2.png"
             alt="View full size version of a screenshot of ASCII landscape, with hills underneath a sun"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander3.png"
             alt="View full size version of a screenshot of poetic text on webpage"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander4.png"
             alt="View full size version of a screenshot of ASCII tree and text input on webpage"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander5.png"
             alt="View full size version of a screenshot of ASCII clouds"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander6.png"
             alt="View full size version of a screenshot of a square of ASCII grass"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander7.png"
             alt="View full size version of screenshot of white stars on black background"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander8.png"
             alt="View full size version of screenshot of three ASCII trees growing out of the ground"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander9.png"
             alt="View full size version of screenshot of white ASCII flowers growing on a black background"
+            loading="lazy"
           />
         </button>
       </div>
@@ -158,36 +167,42 @@
           <img
             src="images/wander10.png"
             alt="View full size version of screenshot of two lines of text"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander11.png"
             alt="View full size version of screenshot of two lines of text"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander12.png"
             alt="View full size version of screenshot of text document that contains ASCII sketches of stars and clouds"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander13.png"
             alt="View full size version of screenshot of text document that contains ASCII sketches of hills"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander14.png"
             alt="View full size version of screenshot of text document that contains ASCII sketches of growing flowers and clouds"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/wander15.png"
             alt="View full size version of screenshot of text document that contains ASCII sketches of treetops"
+            loading="lazy"
           />
         </button>
       </div>
@@ -221,90 +236,105 @@
           <img
             src="images/wander1.png"
             alt="Screenshot of four ASCII flowers growing with thin stems and leaves"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander2.png"
             alt="Screenshot of ASCII landscape, with three hills underneath a sun"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander3.png"
             alt="Screenshot of ASCII lines of grass with text interspersed reading: 'Hardiness maybe came from creeping through branch bundles that we pretended were hideouts' "
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander4.png"
             alt="Screenshot of ASCII tree with text 'carved' into it, including heart text emoji, face with star eyes text emoji, and the text 'wonderful trees hey there~'. Next to the tree is the text 'knife in hand, into the tree hello you carve', with 'hello' typed into a text input box."
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander5.png"
             alt="Screenshot of ASCII clouds floating across the browser with the text 'sinking as we sit' above them"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander6.png"
             alt="Screenshot of a square of ASCII grass"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander7.png"
             alt="Screenshot of white stars on black background with the text 'dry air and crinkling leaves"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander8.png"
             alt="Screenshot of three ASCII trees growing out of the ground. Their shadows are blue underlined hyperlinks"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander9.png"
             alt="Screenshot of white ASCII flowers growing out of lines of grass on a black background"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander10.png"
             alt="Screenshot of lines of text: 'this ruffled text runs in' and 'their metallic connection comforts in'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander11.png"
             alt="Screenshot of lines of text: 'our creased access deceives us' and 'the smooth link slithers last'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander12.png"
             alt="Text document that contains ASCII sketches of white stars on a black background, and white clouds on a gray background"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander13.png"
             alt="Text document that contains ASCII sketches of hills"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander14.png"
             alt="Text document that contains ASCII sketches. From top to bottom, it includes growing ASCII flowers, the words 'pigeons peck', 'snowflakes', and 'clouds', and ASCII clouds surrounding the text 'WITH .5 line height'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/wander15.png"
             alt="Text document that contains ASCII sketches of treetops"
+            loading="lazy"
           />
         </div>
         <button class="left-arrow" aria-label="Previous image">
