--- a/storylines.html
+++ b/storylines.html
@@ -81,29 +81,34 @@
           <img
             src="images/storylines-1.jpg"
             alt="View full size version of two Android smartphones with a game screen open"
+            loading="lazy"
           /></button
         ><button class="zoomable">
           <img
             src="images/storylines-2.png"
             alt="View full size version of a smartphone screenshot of Storylines gameplay"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-3.png"
             alt="View full size version of a screenshot of a question prompt during gameplay"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-4.png"
             alt="View full size version of a screenshot of a question prompt during gameplay"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-5.png"
             alt="View full size version of a a bird constellation graphic"
+            loading="lazy"
           />
         </button>
       </div>
@@ -113,36 +118,42 @@
           <img
             src="images/storylines-6.jpg"
             alt="View full size version of people talking, with one holding a phone"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-7.jpg"
             alt="View full size version of people talking while holding phones"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-8.jpg"
             alt="View full size version of people looking at their phones while facing each other"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-9.jpg"
             alt="View full size version of people laughing together"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-10.jpg"
             alt="View full size version of one person telling another a story"
+            loading="lazy"
           />
         </button>
         <button class="zoomable">
           <img
             src="images/storylines-11.jpg"
             alt="View full size version of a close-up of two people's hands holding smartphones"
+            loading="lazy"
           />
         </button>
       </div>
@@ -176,66 +187,77 @@
           <img
             src="images/storylines-1.jpg"
             alt="Two Android smartphones with game screens open. The screens have a prompt that reads, 'There was a time I felt like a genius...' One phone has a 'Finished' button below the prompt, and the other has the text 'Listening'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-2.png"
             alt="Smartphone screenshot of game interface. Text at the top states 'What type of storyteller are you?' with options below including 'Adventurer', 'Artist', 'Comedian', 'Listener', 'Philosopher', and 'Trickster'. Below that is the text 'Click to select a player name' and a 'Help' and 'OK' button."
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-3.png"
             alt="Smartphone screenshot of a question prompt during gameplay. The top has a countdown timer and button for story quests. In the prompt in the middle states, 'There was a time I was wrong...'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-4.png"
             alt="Smartphone screenshot of a question prompt during gameplay. The top has a countdown timer and button for story quests. In the prompt in the middle states, 'There was a time I was truly myself...'"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-5.png"
             alt="Illustrated constellation of a bird in flight"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-6.jpg"
             alt="Two people talking, with one holding a phone with a prompt from the Storylines interface on it"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-7.jpg"
             alt="One person talking to another person while they hold their phones up in front of their chests"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-8.jpg"
             alt="Two people looking at their phones while facing each other. One of them presses a button on their screen"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-9.jpg"
             alt="Two people laughing together while holding their phones"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-10.jpg"
             alt="One person telling another a story to another, while pointing upwards. Both have their phones in front of them"
+            loading="lazy"
           />
         </div>
         <div class="slide">
           <img
             src="images/storylines-11.jpg"
             alt="Close-up of two people's hands holding smartphones with the game interface open on them. One screen states, 'New constellation!' with a graphic of a swan constellation underneath the text. The other phone has a list of collected constellations of the user"
+            loading="lazy"
           />
         </div>
 
